--- a/week4-review/styles.css
+++ b/week4-review/styles.css
@@ -15,17 +15,17 @@
   background-color: rgba(229, 205, 163, 0.55);
 }
 
-blockquote {
+.blockquote {
   margin-top: 240px;
   color: rgba(76, 67, 59, 0.83);
   font-size: 18pt;
 }
 
-footer {
+.footer {
   color: rgba(76, 67, 59, 0.83);
 }
 
-a {
+.a {
   color: rgba(76, 67, 59, 0.83);
   font-family: sans-serif;
   font-weight: lighter;
@@ -40,4 +40,25 @@ a {
 .col-md-4 {
   height: 350px;
   width: 350px;
+}
+
+.img {
+  float: center;
+}
+
+.column {
+  width: 300px;
+  float: left;
+}
+
+.my-class {
+  margin: 12px;
+  border: 2px solid green;
+  padding: 4px;
+  background-color: orange;
+}
+
+.h1 {
+  font-size: 32px;
+  font-style: italic;
 }
